--- a/package.json
+++ b/package.json
@@ -3,14 +3,29 @@
   "version": "0.9.0",
   "private": true,
   "author": {
-    "name": "Bloq Labs",
-    "email": "labs@bloq.com",
-    "url": "http://bloq.com/"
+    "name": "Autonomous Software",
+    "email": "labs@autonomous.sh",
+    "url": "https://autonomous.sh"
   },
-  "description": "Metronome Wallet for desktop",
+  "description": "Metronome Wallet for desktop devices",
   "repository": {
     "type": "git",
     "url": "git@github.com:MetronomeToken/metronome-desktop-wallet.git"
+  },
+  "homepage": "./",
+  "main": "public/electron.js",
+  "copyright": "Copyright © 2018 ${author}",
+  "scripts": {
+    "start": "react-scripts start",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "prettier": "prettier --write ./**/*.js",
+    "pack": "build --c.extraMetadata.main=build/electron.js",
+    "dev": "concurrently \"BROWSER=none npm start\" \"wait-on $npm_package_config_cra_dev_serv && ELECTRON_START_URL=$npm_package_config_cra_dev_serv electron .\"",
+    "debug": "concurrently \"BROWSER=none npm start\" \"wait-on $npm_package_config_cra_dev_serv && ELECTRON_START_URL=$npm_package_config_cra_dev_serv electron . --inspect\"",
+    "dist": "react-scripts build && build --c.extraMetadata.main=build/electron.js",
+    "ppa": "TARFILE=\"$npm_package_name\"_$npm_package_version.orig.tar.gz; DEBFILE=\"$npm_package_name\"_v$npm_package_version.deb; mkdir -p dist/app; dpkg -x dist/$DEBFILE ./dist/app/ && rm -r dist/app/opt/Metronome\\ Wallet/resources/app.asar.unpacked/node_modules/7zip-bin-linux/arm* && perl -pi -e 's/opt/usr\\/lib/' dist/app/usr/share/applications/metronome-desktop-wallet.desktop && tar -czf ppa/$TARFILE -C dist/ app/ && rm -r dist/app && cd ppa && tar -xzf $TARFILE",
+    "release": "react-scripts build && build --c.extraMetadata.main=build/electron.js --publish always"
   },
   "dependencies": {
     "7zip-bin": "^3.1.0",
@@ -69,11 +84,32 @@
     "tough-cookie": "^2.3.4",
     "web3": "1.0.0-beta.33"
   },
-  "homepage": "./",
-  "main": "public/electron.js",
-  "copyright": "Copyright © 2018 ${author}",
+  "devDependencies": {
+    "concurrently": "^3.5.1",
+    "devtron": "^1.4.0",
+    "electron": "^1.7.11",
+    "electron-builder": "^20.5.1",
+    "electron-devtools-installer": "^2.2.3",
+    "electron-is-dev": "^0.3.0",
+    "eslint": "^4.19.1",
+    "eslint-config-bloq": "^1.2.2",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.10.0",
+    "eslint-plugin-jsdoc": "^3.5.0",
+    "eslint-plugin-mocha": "^5.0.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-prefer-arrow": "^1.1.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "expect": "^22.4.3",
+    "prettier": "^1.10.2",
+    "proxyquire": "^1.8.0",
+    "react-testing-library": "^1.9.2",
+    "wait-on": "^2.1.0"
+  },
   "build": {
-    "appId": "com.bloq.metronome.wallet.desktop",
+    "appId": "sh.autonomous.metronome.wallet.desktop",
     "productName": "Metronome Wallet",
     "files": [
       "build/**/*",
@@ -122,42 +158,5 @@
   },
   "config": {
     "cra_dev_serv": "http://localhost:3000"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "prettier": "prettier --write ./**/*.js",
-    "pack": "build --c.extraMetadata.main=build/electron.js",
-    "dev": "concurrently \"BROWSER=none npm start\" \"wait-on $npm_package_config_cra_dev_serv && ELECTRON_START_URL=$npm_package_config_cra_dev_serv electron .\"",
-    "debug": "concurrently \"BROWSER=none npm start\" \"wait-on $npm_package_config_cra_dev_serv && ELECTRON_START_URL=$npm_package_config_cra_dev_serv electron . --inspect\"",
-    "dist": "react-scripts build && build --c.extraMetadata.main=build/electron.js",
-    "ppa": "TARFILE=\"$npm_package_name\"_$npm_package_version.orig.tar.gz; DEBFILE=\"$npm_package_name\"_v$npm_package_version.deb; mkdir -p dist/app; dpkg -x dist/$DEBFILE ./dist/app/ && rm -r dist/app/opt/Metronome\\ Wallet/resources/app.asar.unpacked/node_modules/7zip-bin-linux/arm* && perl -pi -e 's/opt/usr\\/lib/' dist/app/usr/share/applications/metronome-desktop-wallet.desktop && tar -czf ppa/$TARFILE -C dist/ app/ && rm -r dist/app && cd ppa && tar -xzf $TARFILE",
-    "release": "react-scripts build && build --c.extraMetadata.main=build/electron.js --publish always",
-    "postinstall": "electron-builder install-app-deps"
-  },
-  "devDependencies": {
-    "concurrently": "^3.5.1",
-    "devtron": "^1.4.0",
-    "electron": "^1.7.11",
-    "electron-builder": "^20.5.1",
-    "electron-devtools-installer": "^2.2.3",
-    "electron-is-dev": "^0.3.0",
-    "eslint": "^4.19.1",
-    "eslint-config-bloq": "^1.2.2",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.10.0",
-    "eslint-plugin-jsdoc": "^3.5.0",
-    "eslint-plugin-mocha": "^5.0.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-prefer-arrow": "^1.1.1",
-    "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "expect": "^22.4.3",
-    "prettier": "^1.10.2",
-    "proxyquire": "^1.8.0",
-    "react-testing-library": "^1.9.2",
-    "wait-on": "^2.1.0"
   }
 }
