--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,10 @@
 image: Visual Studio 2017
 
+branches:
+  only:
+    - master
+    - develop
+
 init:
   - git config --global core.autocrlf input
 
