Replace email and add license to ppa

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "author": {
     "name": "Autonomous Software",
-    "email": "labs@autonomous.sh",
+    "email": "info@autonomous.sh",
     "url": "https://autonomous.sh"
   },
   "description": "Metronome Wallet for desktop devices",
