--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -18,6 +18,8 @@
   "rules": {
     "arrow-body-style": "off",
     "complexity": ["error", 10],
-    "max-params": ["error", 4]
+    "max-params": ["error", 4],
+    "no-console": "warn",
+    "no-shadow": "warn"
   }
 }
