--- a/public/main/settings/defaultSettings.json
+++ b/public/main/settings/defaultSettings.json
@@ -7,7 +7,7 @@
     },
     "defaultDerivationPath": "m/44'/60'/0'/0",
     "indexerApiUrl": "https://indexer.met.bloqrock.net",
-    "tracerApiUrl": "http://18.236.157.235:3000"
+    "tracerApiUrl": "https://tracer.met.bloqrock.net"
   },
   "coincap": {
     "ethPriceEmitRate": 5
