--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
     "moment": "^2.20.1",
     "moment-precise-range-plugin": "^1.3.0",
     "nedb": "^1.8.0",
-    "node-notifier": "^5.2.1",
     "p-defer": "^1.0.0",
     "p-retry": "^1.0.0",
     "promise-all-props": "^1.0.1",
@@ -125,9 +124,12 @@
       "buildResources": "assets"
     },
     "mac": {
-      "artifactName": "${name}_v${version}.${ext}",
+      "artifactName": "${name}-${version}.${ext}",
       "category": "public.app-category.finance",
-      "icon": "./assets/icon.icns"
+      "icon": "./assets/icon.icns",
+      "extendInfo": {
+        "NSUserNotificationAlertStyle": "alert"
+      }
     },
     "dmg": {
       "backgroundColor": "#7e61f8",
