Add analytics events to api methods

--- a/public/main/settings/defaultSettings.json
+++ b/public/main/settings/defaultSettings.json
@@ -7,7 +7,8 @@
     },
     "defaultDerivationPath": "m/44'/60'/0'/0",
     "indexerApiUrl": "https://indexer.metronome.io",
-    "tracerApiUrl": "https://tracer.metronome.io"
+    "tracerApiUrl": "https://tracer.metronome.io",
+    "trackingId": "UA-116275666-3"
   },
   "coincap": {
     "ethPriceEmitRate": 5
@@ -19,5 +20,5 @@
       "symbol": "MET"
     }
   },
-  "settingsVersion": 12
+  "settingsVersion": 13
 }
