Parametrize rescan balance timeout

--- a/public/main/settings/defaultSettings.json
+++ b/public/main/settings/defaultSettings.json
@@ -8,7 +8,8 @@
     "defaultDerivationPath": "m/44'/60'/0'/0",
     "indexerApiUrl": "https://indexer.metronome.io",
     "tracerApiUrl": "https://tracer.metronome.io",
-    "trackingId": "UA-116275666-6"
+    "trackingId": "UA-116275666-6",
+    "rescanBalance": 15000
   },
   "coincap": {
     "ethPriceEmitRate": 5
@@ -20,5 +21,5 @@
       "symbol": "MET"
     }
   },
-  "settingsVersion": 14
+  "settingsVersion": 15
 }
