--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "reselect": "^3.0.1",
     "safe-buffer": "^5.1.1",
     "socket.io-client": "^2.0.4",
+    "startinterval2": "1.0.1",
     "styled-components": "^3.0.2",
     "supports-color": "^5.3.0",
     "tough-cookie": "^2.3.4",
