--- a/public/main/settings/defaultSettings.json
+++ b/public/main/settings/defaultSettings.json
@@ -9,7 +9,8 @@
     "indexerApiUrl": "https://indexer.metronome.io",
     "tracerApiUrl": "https://tracer.metronome.io",
     "trackingId": "UA-116275666-6",
-    "rescanBalance": 15000
+    "rescanBalance": 15000,
+    "rescanUnconfirmedTxs": 600000
   },
   "coincap": {
     "ethPriceEmitRate": 5
