Use smart-round package to round numerical values
Closes #307

--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "ppa": "TARFILE=\"$npm_package_name\"_$npm_package_version.orig.tar.gz; DEBFILE=\"$npm_package_name\"_v$npm_package_version.deb; mkdir -p dist/app; dpkg -x dist/$DEBFILE ./dist/app/ && rm -r dist/app/opt/Metronome\\ Wallet/resources/app.asar.unpacked/node_modules/7zip-bin-linux/arm* && perl -pi -e 's/opt/usr\\/lib/' dist/app/usr/share/applications/metronome-desktop-wallet.desktop && tar -czf ppa/$TARFILE -C dist/ app/ && rm -r dist/app && cd ppa && tar -xzf $TARFILE && cd app && dch -b -v $npm_package_version-1xenial --distribution xenial Xenial release $npm_package_version && debuild -us -uc && dch -b -v $npm_package_version-1artful --distribution artful Artful release $npm_package_version && debuild -us -uc && dch -b -v $npm_package_version-1bionic --distribution bionic Bionic release $npm_package_version && debuild -us -uc",
     "precommit": "npm run lint",
     "prepush": "CI=true react-scripts test --env=jsdom -",
+    "prebuild": "npm run build:libs",
+    "build:libs": "npm run build:libs:round",
+    "build:libs:round": "cd src/lib/smart-round && npm i && npm run build",
     "release": "react-scripts build && build --c.extraMetadata.main=build/electron.js --publish always",
     "start": "react-scripts start",
     "test": "react-scripts test --env=jsdom"
@@ -34,7 +37,7 @@
     "7zip-bin": "^3.1.0",
     "axios": "^0.17.1",
     "axios-cookiejar-support": "^0.3.5",
-    "bignumber.js": "^6.0.0",
+    "bignumber.js": "7.2.1",
     "bip39": "^2.5.0",
     "chalk": "^2.3.1",
     "coincap-lib": "^1.0.0",
@@ -65,8 +68,8 @@
     "qrcode.react": "^0.7.2",
     "raven": "^2.4.1",
     "raven-js": "^3.22.3",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "16.4.1",
+    "react-dom": "16.4.1",
     "react-hint": "^3.0.1",
     "react-modal": "^3.1.11",
     "react-redux": "^5.0.6",
@@ -80,6 +83,7 @@
     "redux-actions": "^2.2.1",
     "reselect": "^3.0.1",
     "safe-buffer": "^5.1.1",
+    "smart-round": "file:src/lib/smart-round",
     "socket.io-client": "^2.0.4",
     "startinterval2": "1.0.1",
     "styled-components": "^3.0.2",
