--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "metronome-desktop-wallet",
   "version": "1.1.0",
-  "private": true,
   "author": {
     "name": "Autonomous Software",
     "email": "info@autonomous.sh",
@@ -12,6 +11,7 @@
     "type": "git",
     "url": "git@github.com:autonomoussoftware/metronome-wallet-desktop.git"
   },
+  "license": "MIT",
   "homepage": "./",
   "main": "public/electron.js",
   "copyright": "Copyright © 2018 ${author}",
@@ -24,15 +24,16 @@
     "eject": "react-scripts eject",
     "lint": "eslint --cache public && eslint --cache src",
     "pack": "build --c.extraMetadata.main=build/electron.js",
+    "postinstall": "patch-package",
     "ppa": "TARFILE=\"$npm_package_name\"_$npm_package_version.orig.tar.gz; DEBFILE=\"$npm_package_name\"_v$npm_package_version.deb; mkdir -p dist/app; dpkg -x dist/$DEBFILE ./dist/app/ && rm -r dist/app/opt/Metronome\\ Wallet/resources/app.asar.unpacked/node_modules/7zip-bin-linux/arm* && perl -pi -e 's/opt/usr\\/lib/' dist/app/usr/share/applications/metronome-desktop-wallet.desktop && tar -czf ppa/$TARFILE -C dist/ app/ && rm -r dist/app && cd ppa && tar -xzf $TARFILE && cd app && dch -b -v $npm_package_version-1xenial --distribution xenial Xenial release $npm_package_version && debuild -us -uc && dch -b -v $npm_package_version-1artful --distribution artful Artful release $npm_package_version && debuild -us -uc && dch -b -v $npm_package_version-1bionic --distribution bionic Bionic release $npm_package_version && debuild -us -uc",
     "precommit": "npm run lint",
-    "prepush": "CI=true react-scripts test --env=jsdom -",
+    "prepush": "CI=true react-scripts test -",
     "prebuild": "npm run build:libs",
     "build:libs": "npm run build:libs:round",
     "build:libs:round": "cd src/lib/smart-round && npm i && npm run build",
     "release": "react-scripts build && build --c.extraMetadata.main=build/electron.js --publish always",
     "start": "react-scripts start",
-    "test": "react-scripts test --env=jsdom"
+    "test": "react-scripts test"
   },
   "dependencies": {
     "7zip-bin": "3.1.0",
@@ -58,10 +59,9 @@
     "ethereumjs-wallet": "0.6.0",
     "fast-password-entropy": "1.1.0",
     "human-standard-token-abi": "1.0.2",
-    "lodash": "4.17.10",
+    "lodash": "4.17.11",
     "metronome-contracts": "1.4.1",
-    "moment": "2.22.2",
-    "moment-precise-range-plugin": "1.3.0",
+    "metronome-wallet-ui-logic": "1.0.0",
     "nedb": "1.8.0",
     "p-defer": "1.0.0",
     "p-retry": "1.0.0",
@@ -73,16 +73,12 @@
     "react-dom": "16.4.1",
     "react-hint": "3.1.0",
     "react-modal": "3.5.1",
-    "react-redux": "5.0.7",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
-    "react-scripts": "1.1.5",
+    "react-scripts": "2.0.5",
     "react-toastify": "3.4.3",
     "react-transition-group": "2.2.1",
     "react-virtualized": "9.20.1",
-    "redux": "3.7.2",
-    "redux-actions": "2.4.0",
-    "reselect": "3.0.1",
     "safe-buffer": "5.1.2",
     "smart-round": "1.0.0",
     "socket.io-client": "2.1.1",
@@ -113,7 +109,8 @@
     "eslint-plugin-standard": "4.0.0",
     "expect": "22.4.3",
     "husky": "0.14.3",
-    "prettier": "1.13.7",
+    "patch-package": "5.1.1",
+    "prettier": "1.14.2",
     "proxyquire": "1.8.0",
     "react-testing-library": "1.10.0",
     "wait-on": "2.1.0"
@@ -171,5 +168,11 @@
   },
   "config": {
     "cra_dev_serv": "http://localhost:3000"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
