Convert shrink-array to ES5 using patch-package
ES6 code in node_modules would break the build.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eject": "react-scripts eject",
     "lint": "eslint --cache public && eslint --cache src",
     "pack": "build --c.extraMetadata.main=build/electron.js",
+    "postinstall": "patch-package",
     "ppa": "TARFILE=\"$npm_package_name\"_$npm_package_version.orig.tar.gz; DEBFILE=\"$npm_package_name\"_v$npm_package_version.deb; mkdir -p dist/app; dpkg -x dist/$DEBFILE ./dist/app/ && rm -r dist/app/opt/Metronome\\ Wallet/resources/app.asar.unpacked/node_modules/7zip-bin-linux/arm* && perl -pi -e 's/opt/usr\\/lib/' dist/app/usr/share/applications/metronome-desktop-wallet.desktop && tar -czf ppa/$TARFILE -C dist/ app/ && rm -r dist/app && cd ppa && tar -xzf $TARFILE && cd app && dch -b -v $npm_package_version-1xenial --distribution xenial Xenial release $npm_package_version && debuild -us -uc && dch -b -v $npm_package_version-1artful --distribution artful Artful release $npm_package_version && debuild -us -uc && dch -b -v $npm_package_version-1bionic --distribution bionic Bionic release $npm_package_version && debuild -us -uc",
     "precommit": "npm run lint",
     "prepush": "CI=true react-scripts test --env=jsdom -",
@@ -115,6 +116,7 @@
     "eslint-plugin-standard": "3.1.0",
     "expect": "22.4.3",
     "husky": "0.14.3",
+    "patch-package": "5.1.1",
     "prettier": "1.13.7",
     "proxyquire": "1.8.0",
     "react-testing-library": "1.10.0",
