Add wallet core, removed plugins and started working on connecting the renderer with the main process

--- a/public/main/client/settings/defaultSettings.json
+++ b/public/main/client/settings/defaultSettings.json
@@ -1,13 +1,13 @@
 {
   "app": {
-    "chain": "mainnet",
+    "chain": "ropsten",
     "node": {
-      "jsonRpcApiUrl": "https://eth.wallet.metronome.io:8545",
-      "websocketApiUrl": "wss://eth.wallet.metronome.io:8546"
+      "jsonRpcApiUrl": "https://eth.wallet.bloqrock.net:8545",
+      "websocketApiUrl": "wss://eth.wallet.bloqrock.net:8546"
     },
+    "indexerApiUrl": "https://indexer.bloqrock.net",
+    "tracerApiUrl": "https://tracer.bloqrock.net",
     "defaultDerivationPath": "m/44'/60'/0'/0",
-    "indexerApiUrl": "https://indexer.metronome.io",
-    "tracerApiUrl": "https://tracer.metronome.io",
     "trackingId": "UA-116275666-6",
     "rescanBalance": 15000,
     "rescanUnconfirmedTxs": 600000
