--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "build:libs": "npm run build:libs:round",
     "build:libs:round": "cd src/lib/smart-round && npm i && npm run build",
     "release": "react-scripts build && build --c.extraMetadata.main=build/electron.js --publish always",
+    "ropsten": "REACT_APP_ETH_CHAIN=ropsten npm run dev",
     "start": "react-scripts start",
     "test": "react-scripts test"
   },
@@ -61,7 +62,8 @@
     "human-standard-token-abi": "1.0.2",
     "lodash": "4.17.11",
     "metronome-contracts": "1.4.1",
-    "metronome-wallet-ui-logic": "1.0.0",
+    "metronome-wallet-core": "1.1.3",
+    "metronome-wallet-ui-logic": "git@github.com:autonomoussoftware/metronome-wallet-ui-logic.git#backport-changes",
     "nedb": "1.8.0",
     "p-defer": "1.0.0",
     "p-retry": "1.0.0",
