--- a/package.json
+++ b/package.json
@@ -26,8 +26,6 @@
     "pack": "build --c.extraMetadata.main=build/electron.js",
     "postinstall": "patch-package",
     "ppa": "TARFILE=\"$npm_package_name\"_$npm_package_version.orig.tar.gz; DEBFILE=\"$npm_package_name\"_v$npm_package_version.deb; mkdir -p dist/app; dpkg -x dist/$DEBFILE ./dist/app/ && rm -r dist/app/opt/Metronome\\ Wallet/resources/app.asar.unpacked/node_modules/7zip-bin-linux/arm* && perl -pi -e 's/opt/usr\\/lib/' dist/app/usr/share/applications/metronome-desktop-wallet.desktop && tar -czf ppa/$TARFILE -C dist/ app/ && rm -r dist/app && cd ppa && tar -xzf $TARFILE && cd app && dch -b -v $npm_package_version-1xenial --distribution xenial Xenial release $npm_package_version && debuild -us -uc && dch -b -v $npm_package_version-1artful --distribution artful Artful release $npm_package_version && debuild -us -uc && dch -b -v $npm_package_version-1bionic --distribution bionic Bionic release $npm_package_version && debuild -us -uc",
-    "precommit": "npm run lint",
-    "prepush": "CI=true react-scripts test -",
     "prebuild": "npm run build:libs",
     "build:libs": "npm run build:libs:round",
     "build:libs:round": "cd src/lib/smart-round && npm i && npm run build",
@@ -92,7 +90,8 @@
     "eslint-plugin-promise": "4.0.1",
     "eslint-plugin-standard": "4.0.0",
     "expect": "22.4.3",
-    "husky": "0.14.3",
+    "husky": "1.3.0",
+    "lint-staged": "8.1.0",
     "patch-package": "5.1.1",
     "prettier": "1.14.2",
     "proxyquire": "1.8.0",
@@ -158,5 +157,15 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "CI=true react-scripts test -"
+    }
+  },
+  "lint-staged": {
+    "{src,public}/**/*.js": ["eslint --cache"],
+    "src/**/*.{js,json,css,md}": ["prettier --write", "git add"]
+  }
 }
