--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "test": "react-scripts test"
   },
   "dependencies": {
+    "@reach/menu-button": "0.1.7",
     "bignumber.js": "7.2.1",
     "bip39": "2.5.0",
     "chalk": "2.4.1",
