Remove tests from pre-push hook for the time being

--- a/package.json
+++ b/package.json
@@ -161,8 +161,7 @@
   ],
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
-      "pre-push": "CI=true react-scripts test -"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
