--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "fast-password-entropy": "1.1.0",
     "lodash": "4.17.11",
     "metronome-contracts": "1.4.2",
-    "metronome-wallet-core": "1.1.3",
-    "metronome-wallet-ui-logic": "git@github.com:autonomoussoftware/metronome-wallet-ui-logic.git#backport-changes",
+    "metronome-wallet-core": "git@github.com:autonomoussoftware/metronome-wallet-core.git#port-feature",
+    "metronome-wallet-ui-logic": "git@github.com:autonomoussoftware/metronome-wallet-ui-logic.git#port-feature",
     "nedb": "1.8.0",
     "qrcode.react": "0.7.2",
     "raven": "2.6.3",
