--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "electron-updater": "2.23.3",
     "fast-password-entropy": "1.1.0",
     "lodash": "4.17.11",
-    "metronome-contracts": "1.4.2",
+    "metronome-contracts": "git@github.com:autonomoussoftware/metronome-contracts-js.git#port-feature",
     "metronome-wallet-core": "git@github.com:autonomoussoftware/metronome-wallet-core.git#port-feature",
     "metronome-wallet-ui-logic": "git@github.com:autonomoussoftware/metronome-wallet-ui-logic.git#port-feature",
     "nedb": "1.8.0",
