--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "build:libs:round": "cd src/lib/smart-round && npm i && npm run build",
     "release": "react-scripts build && build --c.extraMetadata.main=build/electron.js --publish always",
     "ropsten": "REACT_APP_ETH_CHAIN=ropsten npm run dev",
+    "rebuild": "electron-builder rebuild",
     "start": "react-scripts start",
     "test": "react-scripts test"
   },
@@ -38,14 +39,14 @@
     "@reach/menu-button": "0.1.7",
     "bignumber.js": "7.2.1",
     "bip39": "2.5.0",
-    "chalk": "2.4.1",
+    "chalk": "2.4.2",
     "credential-plus": "2.0.7",
     "credential-plus-pbkdf2": "2.0.4",
-    "cuid": "2.1.1",
+    "cuid": "2.1.4",
     "dotenv": "5.0.1",
     "electron-context-menu": "0.9.1",
     "electron-debug": "1.5.0",
-    "electron-log": "2.2.16",
+    "electron-log": "2.2.17",
     "electron-settings": "3.2.0",
     "electron-unhandled": "1.1.0",
     "electron-updater": "2.23.3",
@@ -56,8 +57,8 @@
     "metronome-wallet-ui-logic": "git@github.com:autonomoussoftware/metronome-wallet-ui-logic.git#port-feature",
     "nedb": "1.8.0",
     "qrcode.react": "0.7.2",
-    "raven": "2.6.3",
-    "raven-js": "3.26.3",
+    "raven": "2.6.4",
+    "raven-js": "3.27.0",
     "react": "16.4.1",
     "react-dom": "16.4.1",
     "react-hint": "3.1.0",
@@ -70,7 +71,7 @@
     "smart-round": "1.0.0",
     "styled-components": "4.1.2",
     "universal-analytics": "0.4.20",
-    "web3-utils": "1.0.0-beta.36"
+    "web3-utils": "1.0.0-beta.37"
   },
   "devDependencies": {
     "concurrently": "3.6.0",
@@ -79,22 +80,22 @@
     "electron-builder": "20.22.0",
     "electron-devtools-installer": "2.2.4",
     "electron-is-dev": "0.3.0",
-    "eslint": "5.6.0",
+    "eslint": "5.12.0",
     "eslint-config-bloq": "1.3.0",
     "eslint-config-prettier": "2.9.0",
     "eslint-config-standard": "12.0.0",
-    "eslint-plugin-import": "2.13.0",
-    "eslint-plugin-jsdoc": "3.8.0",
-    "eslint-plugin-mocha": "5.2.0",
-    "eslint-plugin-node": "7.0.1",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsdoc": "3.15.1",
+    "eslint-plugin-mocha": "5.2.1",
+    "eslint-plugin-node": "8.0.1",
     "eslint-plugin-prefer-arrow": "1.1.3",
     "eslint-plugin-promise": "4.0.1",
     "eslint-plugin-standard": "4.0.0",
     "expect": "22.4.3",
-    "husky": "1.3.0",
+    "husky": "1.3.1",
     "lint-staged": "8.1.0",
     "patch-package": "5.1.1",
-    "prettier": "1.14.2",
+    "prettier": "1.15.3",
     "proxyquire": "1.8.0",
     "react-testing-library": "1.10.0",
     "wait-on": "2.1.0"
