--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "build:libs:round": "cd src/lib/smart-round && npm i && npm run build",
     "release": "react-scripts build && build --c.extraMetadata.main=build/electron.js --publish always",
     "ropsten": "REACT_APP_ETH_CHAIN=ropsten npm run dev",
-    "rebuild": "electron-builder rebuild",
     "start": "react-scripts start",
     "test": "react-scripts test"
   },
@@ -80,7 +79,7 @@
     "electron-builder": "20.22.0",
     "electron-devtools-installer": "2.2.4",
     "electron-is-dev": "0.3.0",
-    "eslint": "5.12.0",
+    "eslint": "5.6.0",
     "eslint-config-bloq": "1.3.0",
     "eslint-config-prettier": "2.9.0",
     "eslint-config-standard": "12.0.0",
@@ -94,6 +93,7 @@
     "expect": "22.4.3",
     "husky": "1.3.1",
     "lint-staged": "8.1.0",
+    "merkletreejs": "0.0.20",
     "patch-package": "5.1.1",
     "prettier": "1.15.3",
     "proxyquire": "1.8.0",
