Simplify temporary dep URLs

--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
     "electron-updater": "2.23.3",
     "fast-password-entropy": "1.1.0",
     "lodash": "4.17.11",
-    "metronome-contracts": "git@github.com:autonomoussoftware/metronome-contracts-js.git#port-feature",
-    "metronome-wallet-core": "git@github.com:autonomoussoftware/metronome-wallet-core.git#port-feature",
-    "metronome-wallet-ui-logic": "git@github.com:autonomoussoftware/metronome-wallet-ui-logic.git#port-feature",
+    "metronome-contracts": "autonomoussoftware/metronome-contracts-js#port-feature",
+    "metronome-wallet-core": "autonomoussoftware/metronome-wallet-core#port-feature",
+    "metronome-wallet-ui-logic": "autonomoussoftware/metronome-wallet-ui-logic#port-feature",
     "nedb": "1.8.0",
     "qrcode.react": "0.7.2",
     "raven": "2.6.4",
