Fix sync transactions and ui-ready response

--- a/public/.eslintrc.json
+++ b/public/.eslintrc.json
@@ -12,5 +12,8 @@
     },
     "ecmaVersion": 2017
   },
-  "root": true
+  "root": true,
+  "rules": {
+    "promise/catch-or-return": "error"
+  }
 }
