Replace toasts library with custom implementation

--- a/package.json
+++ b/package.json
@@ -51,21 +51,21 @@
     "electron-updater": "2.23.3",
     "fast-password-entropy": "1.1.0",
     "lodash": "4.17.11",
-    "metronome-contracts": "autonomoussoftware/metronome-contracts-js#port-feature",
+    "metronome-contracts": "2.0.0",
     "metronome-wallet-core": "autonomoussoftware/metronome-wallet-core#port-feature",
     "metronome-wallet-ui-logic": "autonomoussoftware/metronome-wallet-ui-logic#port-feature",
     "nedb": "1.8.0",
     "qrcode.react": "0.7.2",
     "raven": "2.6.4",
     "raven-js": "3.27.0",
-    "react": "16.4.1",
-    "react-dom": "16.4.1",
+    "react": "16.7.0",
+    "react-dom": "16.7.0",
     "react-hint": "3.1.0",
     "react-modal": "3.5.1",
+    "react-motion": "0.5.2",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
     "react-scripts": "2.1.3",
-    "react-toastify": "4.5.2",
     "react-virtualized": "9.20.1",
     "smart-round": "1.0.0",
     "styled-components": "4.1.2",
