Remember window size and position
Resolves #59

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "electron-settings": "3.2.0",
     "electron-unhandled": "1.1.0",
     "electron-updater": "2.23.3",
+    "electron-window-state": "5.0.3",
     "fast-password-entropy": "1.1.0",
     "lodash": "4.17.11",
     "metronome-contracts": "2.0.0",
