Use new published version of metronome-wallet-ui-logic

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "lodash": "4.17.11",
     "metronome-contracts": "2.0.0",
     "metronome-wallet-core": "autonomoussoftware/metronome-wallet-core#port-feature",
-    "metronome-wallet-ui-logic": "autonomoussoftware/metronome-wallet-ui-logic#port-feature",
+    "metronome-wallet-ui-logic": "2.0.0",
     "nedb": "1.8.0",
     "p-timeout": "2.0.1",
     "qrcode.react": "0.7.2",
