Apply patches to inner dependencies

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "eject": "react-scripts eject",
     "lint": "eslint --cache public && eslint --cache src",
     "pack": "build --c.extraMetadata.main=build/electron.js",
-    "postinstall": "patch-package",
+    "patch-inner-deps": "git apply --ignore-whitespace --verbose $(find node_modules/ | grep -e /patches/.*\\.patch$)",
+    "prepare": "npm run patch-inner-deps && patch-package",
     "ppa": "TARFILE=\"$npm_package_name\"_$npm_package_version.orig.tar.gz; DEBFILE=\"$npm_package_name\"_v$npm_package_version.deb; mkdir -p dist/app; dpkg -x dist/$DEBFILE ./dist/app/ && rm -r dist/app/opt/Metronome\\ Wallet/resources/app.asar.unpacked/node_modules/7zip-bin-linux/arm* && perl -pi -e 's/opt/usr\\/lib/' dist/app/usr/share/applications/metronome-desktop-wallet.desktop && tar -czf ppa/$TARFILE -C dist/ app/ && rm -r dist/app && cd ppa && tar -xzf $TARFILE && cd app && dch -b -v $npm_package_version-1xenial --distribution xenial Xenial release $npm_package_version && debuild -us -uc && dch -b -v $npm_package_version-1artful --distribution artful Artful release $npm_package_version && debuild -us -uc && dch -b -v $npm_package_version-1bionic --distribution bionic Bionic release $npm_package_version && debuild -us -uc",
     "release": "react-scripts build && build --c.extraMetadata.main=build/electron.js --publish always",
     "start": "react-scripts start",
@@ -50,8 +51,8 @@
     "json-stringify-safe": "5.0.1",
     "lodash": "4.17.11",
     "metronome-contracts": "2.0.0",
-    "metronome-wallet-core": "autonomoussoftware/metronome-wallet-core#port-feature",
-    "metronome-wallet-ui-logic": "2.0.0",
+    "metronome-wallet-core": "2.0.0",
+    "metronome-wallet-ui-logic": "autonomoussoftware/metronome-wallet-ui-logic",
     "nedb": "1.8.0",
     "p-timeout": "2.0.1",
     "qrcode.react": "0.7.2",
