Explicitly patch web3

--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
   "scripts": {
     "debug": "concurrently \"BROWSER=none npm start\" \"wait-on $npm_package_config_cra_dev_serv && ELECTRON_START_URL=$npm_package_config_cra_dev_serv electron . --inspect\"",
     "dev": "concurrently \"BROWSER=none npm start\" \"wait-on $npm_package_config_cra_dev_serv && ELECTRON_START_URL=$npm_package_config_cra_dev_serv electron .\"",
-    "dist": "react-scripts build && build --c.extraMetadata.main=build/electron.js",
     "dist:mac": "./sign/mac.sh",
     "dist:win": ".\\sign\\win.bat",
+    "dist": "react-scripts build && build --c.extraMetadata.main=build/electron.js",
     "eject": "react-scripts eject",
     "lint": "eslint --cache public && eslint --cache src",
     "pack": "build --c.extraMetadata.main=build/electron.js",
-    "patch-inner-deps": "git apply --ignore-whitespace --verbose $(find node_modules/ | grep -e /patches/.*\\.patch$)",
-    "prepare": "npm run patch-inner-deps && patch-package",
+    "patch-web3": "git apply --ignore-whitespace --verbose node_modules/metronome-wallet-core/patches/*",
     "ppa": "TARFILE=\"$npm_package_name\"_$npm_package_version.orig.tar.gz; DEBFILE=\"$npm_package_name\"_v$npm_package_version.deb; mkdir -p dist/app; dpkg -x dist/$DEBFILE ./dist/app/ && rm -r dist/app/opt/Metronome\\ Wallet/resources/app.asar.unpacked/node_modules/7zip-bin-linux/arm* && perl -pi -e 's/opt/usr\\/lib/' dist/app/usr/share/applications/metronome-desktop-wallet.desktop && tar -czf ppa/$TARFILE -C dist/ app/ && rm -r dist/app && cd ppa && tar -xzf $TARFILE && cd app && dch -b -v $npm_package_version-1xenial --distribution xenial Xenial release $npm_package_version && debuild -us -uc && dch -b -v $npm_package_version-1artful --distribution artful Artful release $npm_package_version && debuild -us -uc && dch -b -v $npm_package_version-1bionic --distribution bionic Bionic release $npm_package_version && debuild -us -uc",
+    "prepare": "npm run patch-web3 && patch-package",
     "release": "react-scripts build && build --c.extraMetadata.main=build/electron.js --publish always",
     "start": "react-scripts start",
     "test": "react-scripts test"
@@ -52,7 +52,7 @@
     "lodash": "4.17.11",
     "metronome-contracts": "2.0.0",
     "metronome-wallet-core": "2.0.0",
-    "metronome-wallet-ui-logic": "autonomoussoftware/metronome-wallet-ui-logic",
+    "metronome-wallet-ui-logic": "2.0.1",
     "nedb": "1.8.0",
     "p-timeout": "2.0.1",
     "qrcode.react": "0.7.2",
