--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "metronome-desktop-wallet",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "author": {
     "name": "Autonomous Software",
     "email": "info@autonomous.sh",
@@ -12,7 +12,7 @@
     "url": "git@github.com:autonomoussoftware/metronome-wallet-desktop.git"
   },
   "license": "MIT",
-  "homepage": "https://metronome.io/apps/",
+  "homepage": "./",
   "main": "public/electron.js",
   "copyright": "Copyright © 2019 ${author}",
   "scripts": {
@@ -20,14 +20,14 @@
     "dev": "concurrently \"BROWSER=none npm start\" \"wait-on $npm_package_config_cra_dev_serv && ELECTRON_START_URL=$npm_package_config_cra_dev_serv electron .\"",
     "dist:mac": "./sign/mac.sh",
     "dist:win": ".\\sign\\win.bat",
-    "dist": "react-scripts build && build --c.extraMetadata.main=build/electron.js",
+    "dist": "react-scripts build && npm run pack",
     "eject": "react-scripts eject",
     "lint": "eslint --cache public && eslint --cache src",
     "pack": "build --c.extraMetadata.main=build/electron.js",
-    "patch-web3": "git apply --ignore-whitespace --verbose node_modules/metronome-wallet-core/patches/*",
+    "patch-web3": "git apply --ignore-whitespace --verbose node_modules/metronome-wallet-core/patches/* || true",
     "ppa": "TARFILE=\"$npm_package_name\"_$npm_package_version.orig.tar.gz; DEBFILE=\"$npm_package_name\"_v$npm_package_version.deb; mkdir -p dist/app; dpkg -x dist/$DEBFILE ./dist/app/ && rm -r dist/app/opt/Metronome\\ Wallet/resources/app.asar.unpacked/node_modules/7zip-bin-linux/arm* && perl -pi -e 's/opt/usr\\/lib/' dist/app/usr/share/applications/metronome-desktop-wallet.desktop && tar -czf ppa/$TARFILE -C dist/ app/ && rm -r dist/app && cd ppa && tar -xzf $TARFILE && cd app && dch -b -v $npm_package_version-1xenial --distribution xenial Xenial release $npm_package_version && debuild -us -uc && dch -b -v $npm_package_version-1artful --distribution artful Artful release $npm_package_version && debuild -us -uc && dch -b -v $npm_package_version-1bionic --distribution bionic Bionic release $npm_package_version && debuild -us -uc",
     "prepare": "npm run patch-web3 && patch-package",
-    "release": "react-scripts build && build --c.extraMetadata.main=build/electron.js --publish always",
+    "release": "react-scripts build && npm run pack -- --publish always",
     "start": "react-scripts start",
     "test": "react-scripts test"
   },
@@ -42,6 +42,7 @@
     "dotenv": "5.0.1",
     "electron-context-menu": "0.9.1",
     "electron-debug": "1.5.0",
+    "electron-is-dev": "0.3.0",
     "electron-log": "2.2.17",
     "electron-settings": "3.2.0",
     "electron-unhandled": "1.1.0",
@@ -78,7 +79,6 @@
     "electron": "1.8.8",
     "electron-builder": "20.22.0",
     "electron-devtools-installer": "2.2.4",
-    "electron-is-dev": "0.3.0",
     "eslint": "5.6.0",
     "eslint-config-bloq": "1.3.0",
     "eslint-config-prettier": "2.9.0",
@@ -104,6 +104,7 @@
     "appId": "sh.autonomous.metronome.wallet.desktop",
     "productName": "Metronome Wallet",
     "files": [
+      ".env",
       "build/**/*",
       "node_modules/**/*"
     ],
